fixed margins and spacing in search bar and featured band

--- a/project/css/style.css
+++ b/project/css/style.css
@@ -152,12 +152,17 @@ nav a:link {
 #search-bar {
 	float: left;
 	width: 39.583333%; /* 380px/960px */
+	margin-top: 17px;
 }
 
 #search-bar .type-field {
 	float: left;
 	width: 80.263158%; /* 305px/380px */
 	height: 25px;
+}
+
+#feature_band {
+	margin-top: 17px;
 }
 
 	/*--------Featured Songs--------*/
@@ -179,12 +184,18 @@ nav a:link {
 }
 
 	/*--------Featured Records--------*/
+#wrapper_top {
+	margin: 21px auto;
+}
+
 #feature_records {
 	width: 67.708333%; /* 650px/960px */
 	height: 300px;
 	background-image: url("../images/feature-records_bg.jpg");
 	overflow: hidden;
 	background-repeat: no-repeat;
+	background-position: left bottom;
+	margin-left: 1.3541667%; /* 13px/960px */
 }
 
 #feature_records .titled-section-header {
@@ -198,6 +209,7 @@ nav a:link {
 .wrapper_featured-record {
 	float: left;
 	padding: 20px;
+	text-align: center;
 }
 
 #feature_records li {
